src/test/deca/context/valid/created/testPass2/redefField.deca
class A{
    int x;
}
class B extends A{
    float x;
}

