src/test/deca/context/invalid/created/testPass2/redefWrongSignMeth.deca
class A{
    boolean isTrue(){}
}
class B extends A{
    boolean isTrue(int x){}
}